# pipeline

./: .gitignore  README.md  launcher.py  pyproject.toml
pipeline/config/: compatibility.json  defaults.json
pipeline/core/: config.py  logger.py  pipeline_constants.py  project_manager.py  schemas.py
tests/: test_config.py  test_project_manager.py
tests/test_configs/: compatibility.json  config_class_test.json  defaults.json  invalid_renderer_version.json  list_version_error.json  unknown_dcc.json  valid_resolved.json
