[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline"
version = "0.1.0"
description = "Simple Pipeline Project"
authors = [
    { name = "Max Mustermann", email = "maxmustermann@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.10.2",
    "pytest>=0.6.0",
    "pydantic>=2.12.5"
]

[project.optional-dependencies]
dev = ["black"]

[tool.black]
line-length = 120
target-version = ["py313"]